--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -36,6 +36,7 @@
 @import 'modules/throbber';
 @import 'modules/captcha';
 @import 'modules/_status-messages.scss';
+@import 'modules/pager';
 
 // Global state classes
 @import 'state/state';
