--- a/themes/openy_themes/openy_rose/scss/modules/_page.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_page.scss
@@ -15,3 +15,11 @@ body {
   margin-top: 40px;
   margin-bottom: 20px;
 }
+
+.taxonomy-term {
+  margin-top: 20px;
+
+  & > h3 {
+    margin-top: 0;
+  }
+}
