--- a/themes/openy_themes/openy_rose/templates/views/views-view-unformatted--taxonomy_term.html.twig
+++ b/themes/openy_themes/openy_rose/templates/views/views-view-unformatted--taxonomy_term.html.twig
@@ -18,7 +18,7 @@
  */
 #}
 <div class="container">
-  <div class="row">
+  <div class="row taxonomy-term">
     {% if title %}
       <h3>{{ title }}</h3>
     {% endif %}
