--- a/themes/openy_themes/openy_rose/templates/page/page--403.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page--403.html.twig
@@ -4,8 +4,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>403 Access Denied</h1>
-        <p>You are not authorized to access this page.</p>
+        <h1>{{ '403 Access Denied'|t }}</h1>
+        <p>{{ 'You are not authorized to access this page.'|t }}</p>
       </div>
     </div>
   </div>
