--- a/themes/openy_themes/openy_rose/templates/page/page--404.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page--404.html.twig
@@ -4,8 +4,8 @@
   <div class="container">
     <div class="row error-page">
       <div class="col-md-12">
-        <h1>404 Page not found</h1>
-        <p>Oops! The page that you're looking for was not found.</p>
+        <h1>{{ '404 Page not found'|t }}</h1>
+        <p>{{ 'Oops! The page that you\'re looking for was not found.'|t }}</p>
       </div>
     </div>
   </div>
