--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -9705,7 +9705,7 @@ span.grey-caret:after {
 }
 
 .groupex-results {
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   clear: both;
   padding-top: 15px;
@@ -9737,6 +9737,11 @@ span.grey-caret:after {
     padding: 10px 5px;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .groupex-results table td {
+    padding: 20px 5px;
+  }
+}
 .groupex-results table td.time-duration {
   color: #1d1d1b;
   max-width: 180px;
@@ -9759,9 +9764,20 @@ span.grey-caret:after {
 .groupex-results table td.instructor {
   line-height: 14px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
+  .groupex-results table td.instructor {
+    max-width: 80px;
+  }
+}
+@media screen and (min-width: 321px) and (max-width: 767px) {
   .groupex-results table td.instructor {
     min-width: 105px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .groupex-results table td.instructor {
+    max-width: 105px;
+    padding: 20px 5px;
   }
 }
 .groupex-results table td.instructor a {
@@ -9782,6 +9798,11 @@ span.grey-caret:after {
 .groupex-results table td.instructor .sub {
   font-size: 12px;
   color: #c6188b;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .groupex-results table td.ical {
+    padding: 20px 5px 20px 0px;
+  }
 }
 .groupex-results table tr:nth-child(even) td {
   background-color: #fefefe;
