--- a/modules/search.scss
+++ b/modules/search.scss
@@ -1,4 +1,4 @@
-.search-view {
+.paragraph--type--global-search {
   form {
     margin-bottom: 40px;
     label,
@@ -11,6 +11,15 @@
       font-size: 20px;
       padding: 5px 35px 5px 45px;
       height: 40px;
+      max-width: 100%;
+    }
+    .form-select {
+      border-radius: 8px;
+      border: 1px solid $light-grey;
+      font-size: 20px;
+      padding: 5px 35px 5px 45px;
+      height: 40px;
+      max-width: 100%;
     }
     .form-item-search-api-fulltext {
       position: relative;
@@ -24,14 +33,14 @@
       }
     }
   }
-  h2 {
+  header {
+    @include cachet();
     color: $default-grey;
     font-size: 34px;
     margin: 0 0 25px;
     text-transform: none;
     @include breakpoint(tablet) {
       font-size: 44px;
-      margin: 0 0 50px;
     }
   }
   .views-row {
