[YGH-559] Backport Add to calendar feature on Schedules pages from YMCA TC"

--- a/groupex-table-class-individual.html.twig
+++ b/groupex-table-class-individual.html.twig
@@ -25,6 +25,9 @@
     <div class="instructor">
       <span class="fa fa-user"></span><a class="use-ajax" href="{{ class.instructor_link }}">{{ class.instructor|raw }}</a>
     </div>
+    <td class="ical">
+      <a class="icon icon-calendar" href="{{ class.ical_url }}"></a>
+    </td>
   </div>
 </div>
 
