[YGH-559] Backport Add to calendar feature on Schedules pages from YMCA TC"

--- a/prototypes/scss/screen.scss
+++ b/prototypes/scss/screen.scss
@@ -23,6 +23,7 @@
 @import "./structs/administrative_tabs";
 @import "./structs/taxonomyterm";
 @import "./structs/status-messages";
+@import "./structs/atc";
 
 @import "./blocks/block-description";
 @import "./blocks/paragraph-header";
