--- a/templates/groupex-table-instructor-individual.html.twig
+++ b/templates/groupex-table-instructor-individual.html.twig
@@ -20,4 +20,7 @@
       <span class="fa fa-user"></span><a class="use-ajax" href="{{ class.instructor_link }}">{{ class.instructor|raw }}</a>
     </div>
   </div>
+  <td class="ical">
+    <a class="icon icon-calendar" href="{{ class.ical_url }}"></a>
+  </td>
 </div>
