--- a/templates/groupex-table-class-individual.html.twig
+++ b/templates/groupex-table-class-individual.html.twig
@@ -27,5 +27,8 @@
   <td class="instructor">
     <span class="icon icon-user"></span><a class="use-ajax" href="{{ class.instructor_link }}">{{ class.instructor|raw }}</a>
   </td>
+  <td class="ical">
+    <a class="icon icon-calendar" href="{{ class.ical_url }}"></a>
+  </td>
 </tr>
 
