[YMCA-1620] fix css

--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -10580,11 +10580,16 @@ a.sports-icon.floor-hockey {
   visibility: visible;
 }
 
+tr:last-child .atcb-list {
+  top: auto;
+  bottom: 0;
+}
+
 .atcb-list {
   visibility: hidden;
   position: absolute;
   top: 100%;
-  right: 0;
+  right: 10px;
   width: 170px;
   z-index: 900;
 }
