--- a/openy_lily/sass/global/_colors.scss
+++ b/openy_lily/sass/global/_colors.scss
@@ -73,6 +73,8 @@ $pale-pink: #e2a2cc;
 $pink: #c6188b;
 $purple: #92288d;
 $light-purple: #e3c7e1;
+$main-purple: #b92f9e;
+$dark-purple: #9c1f7b;
 
 $green1: #00aa95;
 $green2: #bde6e6;
