--- a/paragraphs/events.scss
+++ b/paragraphs/events.scss
@@ -133,3 +133,15 @@
     margin-top: 10px;
   }
 }
+
+.field-location-events {
+  .views-row {
+    font-size: 15px;
+    a {
+      line-height: 1.1;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    @include helvetica-neue();
+  }
+}
