--- a/events.scss
+++ b/events.scss
@@ -137,9 +137,12 @@
 .field-location-events {
   .views-row {
     font-size: 15px;
-      line-height: 1.1;
-      margin-top: 10px;
-      margin-bottom: 10px;
+    line-height: 1.1;
+    margin-top: 10px;
+    margin-bottom: 10px;
     @include helvetica-neue();
+    a {
+      padding-right: 5px;
+    }
   }
 }
