[OYPD-24] Rename paragraph webform field, style update

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -1146,12 +1146,19 @@ body {
   margin: 10px 0;
 }
 
-.form-item, .form-actions, .captcha {
+.form-item, .form-actions {
   margin: 1em 0.75em;
 }
 
 .form-type-checkbox {
   padding: 0;
+}
+
+.captcha {
+  margin: 1em 0.75em;
+}
+.captcha .form-item {
+  margin: 1em 0;
 }
 
 .styleguide .sg-color {
