--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -1,8 +1,81 @@
 body {
-  padding-top: 145px !important;
-  @include transition(padding-top 0.2s ease);
-  &.tiny-header {
-    padding-top: 116px !important;
+  @include breakpoint ($tablet-start) {
+    padding-top: 145px !important;
+    @include transition(padding-top 0.2s ease);
+    &.tiny-header {
+      padding-top: 116px !important;
+    }
+  }
+  @include breakpoint (0 $tablet-start) {
+    padding-top: 0 !important;
+    max-width: 100%;
+    overflow: hidden;
+  }
+}
+#side-area {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  background-color: #0089d0;
+  &.expanded-mobile {
+    width: 80%;
+  }
+  .top-side {
+    padding: 14px 0 7px;
+  }
+  a {
+    color: #fffffb;
+    line-height: 20px;
+    font-family: "Cachet",Arial,sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 15px;
+    display: block;
+    text-transform: uppercase;
+    &:hover,
+    &:focus {
+      background-color: #0060af;
+      background: #0060af;
+      text-decoration: none;
+    }
+  }
+  ul {
+    border-top: 1px solid #979797;
+    margin: 0;
+    padding-top: 7px;
+    li {
+      display: block;
+
+      .dropdown-menu {
+        &.open {
+          display: block;
+          position: static;
+          float: none;
+          border: none;
+          margin: 0;
+          box-shadow: none;
+          border-radius: 0;
+          border-bottom: 1px solid #979797;
+        }
+      }
+    }
+  }
+}
+
+.viewport {
+  transition: margin-left .5s;
+  &.expanded-mobile {
+    margin-left: 80%;
+  }
+  @include breakpoint (0 $tablet-start) {
+    #main {
+      margin-top: 52px !important;
+    }
   }
 }
 
@@ -24,12 +97,81 @@ header {
     background-color: transparent;
     .nav-global {
       margin-bottom: 0;
+      border-radius: 0;
       background-color: $gray-light;
       .navbar-header {
         padding: 5px 0 13px;
+        .navbar-toggler {
+          display: none;
+        }
+        @include breakpoint (0 $tablet-start) {
+          width: 100%;
+          padding: 0 !important;
+          height: 52px !important;
+          #block-openy-lily-branding {
+            position: absolute;
+            left: 50%;
+            margin-left: -27px;
+            margin-top: 5px;
+            img {
+              width: 54px !important;
+            }
+          }
+          .navbar-toggler {
+            display: block !important;
+            float: left;
+            outline: 0 !important;
+            margin-top: 8px;
+            background: transparent;
+            -webkit-transition: all .2s ease-out;
+            -moz-transition: all .2s ease-out;
+            -ms-transition: all .2s ease-out;
+            transition: all .2s ease-out;
+            position: relative;
+            padding: 9px 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            .icon-bar {
+              height: 4px;
+              border-radius: 4px;
+              background: #bbb;
+              display: block;
+              transition-delay: 0.25s;
+              width: 22px;
+              + .icon-bar {
+                margin-top: 2px;
+              }
+            }
+            &:hover {
+              background: #89c3f0;
+              .icon-bar {
+                background: #e4e4e4;
+              }
+            }
+            &.expanded-mobile {
+              .icon-bar {
+                &:first-child {
+                  -webkit-transform: translate(0, 6px) rotate(-35deg);
+                  transform: translate(0, 6px) rotate(-35deg);
+                  -webkit-transform-origin: 50%;
+                  transform-origin: 50%;
+                }
+                &:nth-child(2) {
+                  -webkit-transform: scale(0);
+                  transform: scale(0);
+                }
+                &:last-child {
+                  -webkit-transform: translate(0px, -6px) rotate(35deg);
+                  transform: translate(0px, -6px) rotate(35deg);
+                  -webkit-transform-origin: 50%;
+                  transform-origin: 50%;
+                }
+              }
+            }
+          }
+        }
       }
     }
-
     #block-openy-lily-main-menu {
       width: 100%;
       background: rgba(0, 96, 175, 0.95) !important;
@@ -37,6 +179,10 @@ header {
       @include breakpoint($desktop) {
         padding: 0 100px;
       }
+      @include breakpoint (0 $tablet-start) {
+        display: none !important;
+      }
+
       ul {
         float: none;
         li {
@@ -138,6 +284,9 @@ header {
     }
     #block-anonymoususersmenu,
     #block-openy-lily-user-menu {
+      @include breakpoint (0 $tablet-start) {
+        display: none !important;
+      }
       li {
         a {
           color: $gray-dark;
